Add firefox compatability through the polyfill library.
This library was required to make the frontend work in firefox too,
because firefox doesn't support them. See
http://webcomponents.org/polyfills/ and
https://developer.mozilla.org/en-US/docs/Web/Web_Components/HTML_Imports

--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.4",
     "paper-slider": "PolymerElements/paper-slider#~1.0.7",
     "paper-radio-group": "PolymerElements/paper-radio-group#~1.0.5",
-    "paper-radio-button": "PolymerElements/paper-radio-button#~1.0.9"
+    "paper-radio-button": "PolymerElements/paper-radio-button#~1.0.9",
+    "webcomponentsjs": "~0.7.17"
   }
 }
